Added level widget

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,6 +26,9 @@
       <item>
        <widget class="SevenSegmentClock" name="widget_3" native="true"/>
       </item>
+      <item>
+       <widget class="LevelWidget" name="widget_4" native="true"/>
+      </item>
      </layout>
     </item>
     <item>
@@ -58,6 +61,12 @@
    <class>SevenSegmentClock</class>
    <extends>QWidget</extends>
    <header>sevensegmentclock.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>LevelWidget</class>
+   <extends>QWidget</extends>
+   <header>levelwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
